--- a/src/patternfly/base/_globals.scss
+++ b/src/patternfly/base/_globals.scss
@@ -33,10 +33,8 @@
 // Normalize
 @if $pf-v5-global--enable-normalize {
   *,
-  :where(
-    *::before,
-    *::after
-  ) {
+  *::before,
+  *::after  {
     box-sizing: border-box;
   }
 
