feat(text, title, list): apply tokens (#6031)

--- a/src/patternfly/base/_globals.scss
+++ b/src/patternfly/base/_globals.scss
@@ -33,10 +33,8 @@
 // Normalize
 @if $pf-v5-global--enable-normalize {
   *,
-  :where(
-    *::before,
-    *::after
-  ) {
+  *::before,
+  *::after  {
     box-sizing: border-box;
   }
 
@@ -47,7 +45,6 @@
     height: 100%;
   }
 
-  // TODO
   :where(body) {
     font-family: var(--pf-t--global--font--family--body);
     font-size: var(--pf-t--global--font--size--body);
@@ -139,9 +136,3 @@
   }
 }
 
-// stylelint-disable no-invalid-position-at-import-rule
-@import "./themes/dark/globals";
-
-@include pf-v5-theme-dark {
-  @include pf-v5-theme-dark-globals;
-}
