--- a/src/patternfly/components/EmptyState/empty-state.scss
+++ b/src/patternfly/components/EmptyState/empty-state.scss
@@ -1,14 +1,14 @@
 // @debug $empty-state; // check your variable names located in src/patternfly/sass-utilities/component-namespaces.scss
 
-.#{$empty-state} {
-  --#{$empty-state}--PaddingTop: var(--#{$pf-global}--spacer--xl);
-  --#{$empty-state}--PaddingRight: var(--#{$pf-global}--spacer--xl);
-  --#{$empty-state}--PaddingBottom: var(--#{$pf-global}--spacer--xl);
-  --#{$empty-state}--PaddingLeft: var(--#{$pf-global}--spacer--xl);
-  --#{$empty-state}--m-xs--PaddingTop: var(--#{$pf-global}--spacer--md);
-  --#{$empty-state}--m-xs--PaddingRight: var(--#{$pf-global}--spacer--md);
-  --#{$empty-state}--m-xs--PaddingBottom: var(--#{$pf-global}--spacer--md);
-  --#{$empty-state}--m-xs--PaddingLeft: var(--#{$pf-global}--spacer--md);
+:root {
+  --#{$empty-state}--PaddingTop: var(--pf-t--global--spacer--xl);
+  --#{$empty-state}--PaddingRight: var(--pf-t--global--spacer--xl);
+  --#{$empty-state}--PaddingBottom: var(--pf-t--global--spacer--xl);
+  --#{$empty-state}--PaddingLeft: var(--pf-t--global--spacer--xl);
+  --#{$empty-state}--m-xs--PaddingTop: var(--pf-t--global--spacer--md);
+  --#{$empty-state}--m-xs--PaddingRight: var(--pf-t--global--spacer--md);
+  --#{$empty-state}--m-xs--PaddingBottom: var(--pf-t--global--spacer--md);
+  --#{$empty-state}--m-xs--PaddingLeft: var(--pf-t--global--spacer--md);
 
   // Content
   --#{$empty-state}__content--MaxWidth: none;
@@ -17,40 +17,49 @@
   --#{$empty-state}--m-lg__content--MaxWidth: #{pf-size-prem(600px)};
 
   // Icon
-  --#{$empty-state}__icon--MarginBottom: var(--#{$pf-global}--spacer--lg);
-  --#{$empty-state}__icon--FontSize: var(--#{$pf-global}--icon--FontSize--xl);
-  --#{$empty-state}__icon--Color: var(--#{$pf-global}--icon--Color--light);
-  --#{$empty-state}--m-xs__icon--MarginBottom: var(--#{$pf-global}--spacer--md);
-  --#{$empty-state}--m-xl__icon--MarginBottom: var(--#{$pf-global}--spacer--xl);
+  --#{$empty-state}__icon--MarginBottom: var(--pf-t--global--spacer--lg);
+  --#{$empty-state}__icon--FontSize: var(--pf-t--global--icon--size--xl);
+  --#{$empty-state}__icon--Color: var(--pf-t--global--icon--color--subtle);
+  --#{$empty-state}--m-xs__icon--MarginBottom: var(--pf-t--global--spacer--md);
+  --#{$empty-state}--m-xl__icon--MarginBottom: var(--pf-t--global--spacer--xl);
   --#{$empty-state}--m-xl__icon--FontSize: #{pf-size-prem(100px)};
 
+  // Status variant icon color
+  --#{$empty-state}--m-danger__icon--Color: var(--pf-t--global--icon--color--status--danger--default);
+  --#{$empty-state}--m-warning__icon--Color: var(--pf-t--global--icon--color--status--warning--default);
+  --#{$empty-state}--m-success__icon--Color: var(--pf-t--global--icon--color--status--success--default);
+  --#{$empty-state}--m-info__icon--Color: var(--pf-t--global--icon--color--status--info--default);
+  --#{$empty-state}--m-custom__icon--Color: var(--pf-t--global--icon--color--status--custom--default);
+
   // Title text
-  --#{$empty-state}__title-text--FontFamily: var(--#{$pf-global}--FontFamily--heading);
-  --#{$empty-state}__title-text--FontSize: var(--#{$pf-global}--FontSize--xl);
-  --#{$empty-state}__title-text--FontWeight: var(--#{$pf-global}--FontWeight--normal);
-  --#{$empty-state}__title-text--LineHeight: var(--#{$pf-global}--LineHeight--md);
-  --#{$empty-state}--m-xs__title-text--FontSize: var(--#{$pf-global}--FontSize--md);
-  --#{$empty-state}--m-xl__title-text--FontSize: var(--#{$pf-global}--FontSize--4xl);
-  --#{$empty-state}--m-xl__title-text--LineHeight: var(--#{$pf-global}--LineHeight--sm);
+  --#{$empty-state}__title-text--FontFamily: var(--pf-t--global--font--family--heading);
+  --#{$empty-state}__title-text--FontSize: var(--pf-t--global--font--size--heading--md);
+  --#{$empty-state}__title-text--FontWeight: var(--pf-t--global--font--weight--heading);
+  --#{$empty-state}__title-text--LineHeight: var(--pf-t--global--font--line-height--heading);
+  --#{$empty-state}--m-xs__title-text--FontSize: var(--pf-t--global--font--size--heading--xs);
+  --#{$empty-state}--m-xl__title-text--FontSize: var(--pf-t--global--font--size--heading--2xl);
+  --#{$empty-state}--m-xl__title-text--LineHeight: var(--pf-t--global--font--line-height--heading);
 
   // Body
-  --#{$empty-state}__body--MarginTop: var(--#{$pf-global}--spacer--md);
-  --#{$empty-state}__body--Color: var(--#{$pf-global}--Color--200);
-  --#{$empty-state}--body--FontSize: var(--#{$pf-global}--FontSize--md);
-  --#{$empty-state}--m-xs__body--FontSize: var(--#{$pf-global}--FontSize--sm);
-  --#{$empty-state}--m-xs__body--MarginTop: var(--#{$pf-global}--spacer--md);
-  --#{$empty-state}--m-xl__body--FontSize: var(--#{$pf-global}--FontSize--xl);
-  --#{$empty-state}--m-xl__body--MarginTop: var(--#{$pf-global}--spacer--lg);
+  --#{$empty-state}__body--MarginTop: var(--pf-t--global--spacer--md);
+  --#{$empty-state}__body--Color: var(--pf-t--global--text--color--subtle);
+  --#{$empty-state}--body--FontSize: var(--pf-t--global--font--size--body--lg);
+  --#{$empty-state}--m-xs__body--FontSize: var(--pf-t--global--font--size--body);
+  --#{$empty-state}--m-xs__body--MarginTop: var(--pf-t--global--spacer--md);
+  --#{$empty-state}--m-xl__body--FontSize: var(--pf-t--global--font--size--body--lg);
+  --#{$empty-state}--m-xl__body--MarginTop: var(--pf-t--global--spacer--lg);
 
   // Footer
-  --#{$empty-state}__footer--RowGap: var(--#{$pf-global}--spacer--sm);
-  --#{$empty-state}__footer--MarginTop: var(--#{$pf-global}--spacer--xl);
-  --#{$empty-state}--m-xs__footer--MarginTop: var(--#{$pf-global}--spacer--md);
+  --#{$empty-state}__footer--RowGap: var(--pf-t--global--spacer--md);
+  --#{$empty-state}__footer--MarginTop: var(--pf-t--global--spacer--xl);
+  --#{$empty-state}--m-xs__footer--MarginTop: var(--pf-t--global--spacer--md);
 
   // Actions
-  --#{$empty-state}__actions--RowGap: var(--#{$pf-global}--spacer--xs);
-  --#{$empty-state}__actions--ColumnGap: var(--#{$pf-global}--spacer--xs);
+  --#{$empty-state}__actions--RowGap: var(--pf-t--global--spacer--xs);
+  --#{$empty-state}__actions--ColumnGap: var(--pf-t--global--spacer--xs);
+}
 
+.#{$empty-state} {
   display: flex;
   align-items: center;
   justify-content: center;
@@ -92,6 +101,26 @@
 
   &.pf-m-full-height {
     height: 100%;
+  }
+
+  &.pf-m-danger {
+    --#{$empty-state}__icon--Color: var(--#{$empty-state}--m-danger__icon--Color);
+  }
+
+  &.pf-m-warning {
+    --#{$empty-state}__icon--Color: var(--#{$empty-state}--m-warning__icon--Color);
+  }
+
+  &.pf-m-success {
+    --#{$empty-state}__icon--Color: var(--#{$empty-state}--m-success__icon--Color);
+  }
+
+  &.pf-m-info {
+    --#{$empty-state}__icon--Color: var(--#{$empty-state}--m-info__icon--Color);
+  }
+
+  &.pf-m-custom {
+    --#{$empty-state}__icon--Color: var(--#{$empty-state}--m-custom__icon--Color);
   }
 }
 
