--- a/src/patternfly/components/Accordion/accordion-expandable-content.hbs
+++ b/src/patternfly/components/Accordion/accordion-expandable-content.hbs
@@ -1,5 +1,5 @@
-<{{#if accordion--IsDefinitionList}}dd{{else}}div{{/if}} class="{{pfv}}accordion__expandable-content{{#if accordion-expandable-content--IsExpanded}} pf-m-expanded{{/if}}{{#if accordion-expandable-content--IsFixed}} pf-m-fixed{{/if}}{{#if accordion-expandable-content--modifier}} {{accordion-expandable-content--modifier}}{{/if}}"
-  {{#unless accordion-expandable-content--IsExpanded}}hidden{{/unless}}
+<{{#if accordion--IsDefinitionList}}dd{{else}}div{{/if}} class="{{pfv}}accordion__expandable-content{{#if accordion-expandable-content--IsFixed}} pf-m-fixed{{/if}}{{#if accordion-expandable-content--modifier}} {{accordion-expandable-content--modifier}}{{/if}}"
+  {{#unless accordion-item--IsExpanded}}hidden{{/unless}}
   {{#if accordion-expandable-content--IsFixed}}
     {{#unless accordion-expandable-content--HasNoScrollbar}}
       {{#unless accordion--IsDefinitionList}}
