--- a/src/patternfly/components/Accordion/accordion-item.hbs
+++ b/src/patternfly/components/Accordion/accordion-item.hbs
@@ -1,4 +1,4 @@
-<div class="{{pfv}}accordion__item{{#if accordion-item--modifier}} {{accordion-item--modifier}}{{/if}}"
+<div class="{{pfv}}accordion__item{{#if accordion-item--IsExpanded}} pf-m-expanded{{/if}}{{#if accordion-item--modifier}} {{accordion-item--modifier}}{{/if}}"
   {{#if accordion-item--attribute}}
     {{{accordion-item--attribute}}}
   {{/if}}>
