--- a/src/patternfly/components/Popover/popover.scss
+++ b/src/patternfly/components/Popover/popover.scss
@@ -2,37 +2,40 @@
 
 .#{$popover} {
   // Component
-  --#{$popover}--FontSize: var(--#{$pf-global}--FontSize--sm);
+  --#{$popover}--FontSize: var(--pf-t--global--font--size--body--sm);
   --#{$popover}--MinWidth: calc(var(--#{$popover}__content--PaddingLeft) + var(--#{$popover}__content--PaddingRight) + #{pf-size-prem(300px)});
   --#{$popover}--MaxWidth: calc(var(--#{$popover}__content--PaddingLeft) + var(--#{$popover}__content--PaddingRight) + #{pf-size-prem(300px)});
-  --#{$popover}--BoxShadow: var(--#{$pf-global}--BoxShadow--lg);
+  --#{$popover}--BoxShadow: var(--pf-t--global--box-shadow--md);
+  --#{$popover}--BorderRadius: var(--pf-t--global--border--radius--medium);
+
 
   // Title icon colors for states
-  --#{$popover}--m-danger__title-icon--Color: var(--#{$pf-global}--danger-color--100);
-  --#{$popover}--m-warning__title-icon--Color: var(--#{$pf-global}--warning-color--100);
-  --#{$popover}--m-success__title-icon--Color: var(--#{$pf-global}--success-color--100);
-  --#{$popover}--m-info__title-icon--Color: var(--#{$pf-global}--info-color--100);
-  --#{$popover}--m-custom__title-icon--Color: var(--#{$pf-global}--custom-color--200);
+  --#{$popover}--m-danger__title-icon--Color: var(--pf-t--global--icon--color--status--danger--default);
+  --#{$popover}--m-warning__title-icon--Color: var(--pf-t--global--icon--color--status--warning--default);
+  --#{$popover}--m-success__title-icon--Color: var(--pf-t--global--icon--color--status--success--default);
+  --#{$popover}--m-info__title-icon--Color: var(--pf-t--global--icon--color--status--info--default);
+  --#{$popover}--m-custom__title-icon--Color: var(--pf-t--global--icon--color--status--custom--default);
 
   // Title text colors for states
-  --#{$popover}--m-danger__title-text--Color: var(--#{$pf-global}--danger-color--200);
-  --#{$popover}--m-warning__title-text--Color: var(--#{$pf-global}--warning-color--200);
-  --#{$popover}--m-success__title-text--Color: var(--#{$pf-global}--success-color--200);
-  --#{$popover}--m-info__title-text--Color: var(--#{$pf-global}--info-color--200);
-  --#{$popover}--m-custom__title-text--Color: var(--#{$pf-global}--custom-color--300);
+  --#{$popover}--m-danger__title-text--Color: var(--pf-t--global--text--color--status--danger--default);
+  --#{$popover}--m-warning__title-text--Color: var(--pf-t--global--text--color--status--warning--default);
+  --#{$popover}--m-success__title-text--Color: var(--pf-t--global--text--color--status--success--default);
+  --#{$popover}--m-info__title-text--Color: var(--pf-t--global--text--color--status--info--default);
+  --#{$popover}--m-custom__title-text--Color: var(--pf-t--global--text--color--status--custom--default);
 
   // Content
-  --#{$popover}__content--BackgroundColor: var(--#{$pf-global}--BackgroundColor--100);
-  --#{$popover}__content--PaddingTop: var(--#{$pf-global}--spacer--md);
-  --#{$popover}__content--PaddingRight: var(--#{$pf-global}--spacer--md);
-  --#{$popover}__content--PaddingBottom: var(--#{$pf-global}--spacer--md);
-  --#{$popover}__content--PaddingLeft: var(--#{$pf-global}--spacer--md);
+  --#{$popover}__content--BackgroundColor: var(--pf-t--global--background--color--floating--default);
+  --#{$popover}__content--PaddingTop: var(--pf-t--global--spacer--md);
+  --#{$popover}__content--PaddingRight: var(--pf-t--global--spacer--md);
+  --#{$popover}__content--PaddingBottom: var(--pf-t--global--spacer--md);
+  --#{$popover}__content--PaddingLeft: var(--pf-t--global--spacer--md);
+  --#{$popover}__content--BorderRadius: var(--pf-t--global--border--radius--medium);
 
   // Arrow
-  --#{$popover}__arrow--Width: var(--#{$pf-global}--arrow--width-lg);
-  --#{$popover}__arrow--Height: var(--#{$pf-global}--arrow--width-lg);
-  --#{$popover}__arrow--BoxShadow: var(--#{$pf-global}--BoxShadow--lg);
-  --#{$popover}__arrow--BackgroundColor: var(--#{$pf-global}--BackgroundColor--100);
+  --#{$popover}__arrow--Width: #{pf-size-prem(25px)};
+  --#{$popover}__arrow--Height: #{pf-size-prem(25px)};
+  --#{$popover}__arrow--BoxShadow: var(--pf-t--global--box-shadow--md);
+  --#{$popover}__arrow--BackgroundColor: var(--pf-t--global--background--color--floating--default);
   --#{$popover}__arrow--m-top--TranslateX: -50%;
   --#{$popover}__arrow--m-top--TranslateY: 50%;
   --#{$popover}__arrow--m-top--Rotate: 45deg;
@@ -47,30 +50,31 @@
   --#{$popover}__arrow--m-left--Rotate: 45deg;
 
   // Close
-  --#{$popover}__close--Top: calc(var(--#{$popover}__content--PaddingTop) - var(--#{$pf-global}--spacer--form-element)); // align top of button with top of text
-  --#{$popover}__close--Right: calc(var(--#{$popover}__content--PaddingRight) - var(--#{$pf-global}--spacer--md)); // align right of content
-  --#{$popover}__close--sibling--PaddingRight: var(--#{$pf-global}--spacer--2xl);
+  --#{$popover}__close--Top: calc(var(--#{$popover}__content--PaddingTop) - var(--pf-t--global--spacer--sm)); // align top of button with top of text
+  --#{$popover}__close--Right: calc(var(--#{$popover}__content--PaddingRight)); // align right of content
+  --#{$popover}__close--sibling--PaddingRight: var(--pf-t--global--spacer--2xl);
 
   // Header
-  --#{$popover}__header--MarginBottom: var(--#{$pf-global}--spacer--sm);
+  --#{$popover}__header--MarginBottom: var(--pf-t--global--spacer--sm);
 
   // Title text
-  --#{$popover}__title-text--LineHeight: var(--#{$pf-global}--LineHeight--md);
-  --#{$popover}__title-text--FontFamily: var(--#{$pf-global}--FontFamily--heading);
-  --#{$popover}__title-text--FontSize: var(--#{$pf-global}--FontSize--md);
+  --#{$popover}__title-text--LineHeight: var(--pf-t--global--font--line-height--heading);
+  --#{$popover}__title-text--FontFamily: var(--pf-t--global--font--family--heading);
+  --#{$popover}__title-text--FontSize: var(--pf-t--global--font--size--heading--xs);
 
   // Title icon
-  --#{$popover}__title-icon--MarginRight: var(--#{$pf-global}--spacer--sm);
-  --#{$popover}__title-icon--Color: var(--#{$pf-global}--Color--100);
-  --#{$popover}__title-icon--FontSize: var(--#{$pf-global}--FontSize--md);
+  --#{$popover}__title-icon--MarginRight: var(--pf-t--global--spacer--sm);
+  --#{$popover}__title-icon--Color: var(--pf-t--global--icon--color--regular);
+  --#{$popover}__title-icon--FontSize: var(--pf-t--global--font--size--heading--xs);
 
   // Footer
-  --#{$popover}__footer--MarginTop: var(--#{$pf-global}--spacer--md);
+  --#{$popover}__footer--MarginTop: var(--pf-t--global--spacer--md);
 
   position: relative;
   min-width: var(--#{$popover}--MinWidth);
   max-width: var(--#{$popover}--MaxWidth);
   font-size: var(--#{$popover}--FontSize);
+  border-radius: var(--#{$popover}--BorderRadius);
   box-shadow: var(--#{$popover}--BoxShadow);
 
   &.pf-m-no-padding {
@@ -201,6 +205,7 @@
   padding-inline-start: var(--#{$popover}__content--PaddingLeft);
   padding-inline-end: var(--#{$popover}__content--PaddingRight);
   background-color: var(--#{$popover}__content--BackgroundColor);
+  border-radius: var(--#{$popover}__content--BorderRadius);
 }
 
 // Close button
