--- a/src/patternfly/components/Nav/nav-scroll-button.hbs
+++ b/src/patternfly/components/Nav/nav-scroll-button.hbs
@@ -1,17 +1,10 @@
-<button class="{{pfv}}nav__scroll-button{{#if nav-scroll-button--modifier}} {{nav-scroll-button--modifier}}{{/if}}"
+<div class="{{pfv}}nav__scroll-button{{#if nav-scroll-button--modifier}} {{nav-scroll-button--modifier}}{{/if}}"
   {{#if nav-scroll-button--attribute}}
     {{{nav-scroll-button--attribute}}}
-  {{/if}}
-  {{#if nav-scroll-button--IsLeft}}
-    aria-label="Scroll left"
-  {{/if}}
-  {{#if nav-scroll-button--IsRight}}
-    aria-label="Scroll right"
   {{/if}}>
-  {{#if nav-scroll-button--IsLeft}}
-    <i class="fas fa-angle-left" aria-hidden="true"></i>
-  {{/if}}
-  {{#if nav-scroll-button--IsRight}}
-    <i class="fas fa-angle-right" aria-hidden="true"></i>
-  {{/if}}
-</button>
+  {{#> button button--modifier="pf-m-plain pf-m-RTL-icon-static" button--aria-label=(ternary nav-scroll-button--IsEnd 'Scroll end' 'Scroll start')}}
+    {{#> button-icon}}
+      <i class="fas fa-{{ternary nav-scroll-button--IsEnd 'angle-right' 'angle-left'}}" aria-hidden="true"></i>
+    {{/button-icon}}
+  {{/button}}
+</div>
