--- a/src/patternfly/demos/DataList/data-list-page-nav.hbs
+++ b/src/patternfly/demos/DataList/data-list-page-nav.hbs
@@ -1,6 +1,6 @@
 {{#> nav nav--attribute=(concat 'id="' page--id '-primary-nav" aria-label="Global"')}}
   {{#> nav-list}}
-    {{#> nav-item nav-item--expandable="true" nav-item--expanded="true" nav-item--current="true"}}
+    {{#> nav-item nav-item--IsExpandable="true" nav-item--expanded="true" nav-item--current="true"}}
       {{#> nav-link nav-link--href="#"}}
         Components
       {{/nav-link}}
@@ -42,7 +42,7 @@
         {{/nav-list}}
       {{/nav-subnav}}
     {{/nav-item}}
-    {{#> nav-item nav-item--expandable="true"}}
+    {{#> nav-item nav-item--IsExpandable="true"}}
       {{#> nav-link nav-link--href="#"}}
         Patterns
       {{/nav-link}}
@@ -54,7 +54,7 @@
         {{/nav-list}}
       {{/nav-subnav}}
     {{/nav-item}}
-        {{#> nav-item nav-item--expandable="true"}}
+        {{#> nav-item nav-item--IsExpandable="true"}}
       {{#> nav-link nav-link--href="#"}}
         Typography
       {{/nav-link}}
@@ -66,7 +66,7 @@
         {{/nav-list}}
       {{/nav-subnav}}
     {{/nav-item}}
-    {{#> nav-item nav-item--expandable="true"}}
+    {{#> nav-item nav-item--IsExpandable="true"}}
       {{#> nav-link nav-link--href="#"}}
         Icons
       {{/nav-link}}
@@ -78,7 +78,7 @@
         {{/nav-list}}
       {{/nav-subnav}}
     {{/nav-item}}
-    {{#> nav-item nav-item--expandable="true"}}
+    {{#> nav-item nav-item--IsExpandable="true"}}
       {{#> nav-link nav-link--href="#"}}
         Colors
       {{/nav-link}}
