--- a/src/patternfly/demos/Page/page-template-expandable-nav.hbs
+++ b/src/patternfly/demos/Page/page-template-expandable-nav.hbs
@@ -1,6 +1,6 @@
 {{#> nav nav--expandable="true" nav--attribute=(concat 'id="' page--id '-expandable-nav" aria-label="Global"')}}
   {{#> nav-list}}
-    {{#> nav-item nav-item--expandable="true" nav-item--expanded="true" nav-item--current="true"}}
+    {{#> nav-item nav-item--IsExpandable="true" nav-item--expanded="true" nav-item--current="true"}}
       {{#> nav-link nav-link--href="#" nav-link--attribute=(concat 'id="' page--id '-expandable-nav-link1"')}}
         System panel
       {{/nav-link}}
@@ -37,7 +37,7 @@
         {{/nav-item}}
       {{/nav-subnav}}
     {{/nav-item}}
-    {{#> nav-item nav-item--expandable="true"}}
+    {{#> nav-item nav-item--IsExpandable="true"}}
       {{#> nav-link nav-link--href="#" nav-link--attribute=(concat 'id="' page--id '-expandable-nav-link2"')}}
         Policy
       {{/nav-link}}
@@ -54,7 +54,7 @@
         {{/nav-item}}
       {{/nav-subnav}}
     {{/nav-item}}
-    {{#> nav-item nav-item--expandable="true"}}
+    {{#> nav-item nav-item--IsExpandable="true"}}
       {{#> nav-link nav-link--href="#" nav-link--attribute=(concat 'id="' page--id '-expandable-nav-link3"')}}
         Authentication
       {{/nav-link}}
