--- a/src/patternfly/components/Nav/nav-section-title.hbs
+++ b/src/patternfly/components/Nav/nav-section-title.hbs
@@ -1,9 +1,7 @@
 {{setTag nav-section-title--type nav-section-title--type 'h2'}}
 
 <{{tag}} class="{{pfv}}nav__section-title{{#if nav-section-title--modifier}} {{nav-section-title--modifier}}{{/if}}"
-  {{#if nav-section-title--id}}
-    id="{{nav-section-title--id}}"
-  {{/if}}
+  id="{{ternary nav-section-title--id nav-section-title--id (dasherize nav--id nav-section--id nav-section-title--text)}}"
   {{#if nav-section-title--attribute}}
     {{{nav-section-title--attribute}}}
   {{/if}}>
