--- a/src/patternfly/components/Nav/templates/nav--flyout.hbs
+++ b/src/patternfly/components/Nav/templates/nav--flyout.hbs
@@ -16,7 +16,7 @@
       {{/nav-link}}
     {{/nav-item}}
     {{#> nav-item nav-item--IsFlyout="true" nav-item--expanded="true"}}
-      {{#> nav-link nav-link--href="#" nav-link--current=true}}
+      {{#> nav-link nav-link--href="#" nav-link--IsCurrent=true}}
         Subscriptions
       {{/nav-link}}
     {{/nav-item}}
