--- a/src/patternfly/components/Page/page-main-subnav.hbs
+++ b/src/patternfly/components/Page/page-main-subnav.hbs
@@ -1,8 +1,8 @@
-<section class="{{pfv}}page__main-subnav{{#if page-main-subnav--IsLimitWidth}} pf-m-limit-width{{/if}}{{#if page-main-subnav--modifier}} {{page-main-subnav--modifier}}{{/if}}"
-  {{#if page-main-subnav--attribute}}
-    {{{page-main-subnav--attribute}}}
+<section class="{{pfv}}page__main-nav{{#if page-main-nav--IsLimitWidth}} pf-m-limit-width{{/if}}{{#if page-main-nav--modifier}} {{page-main-nav--modifier}}{{/if}}"
+  {{#if page-main-nav--attribute}}
+    {{{page-main-nav--attribute}}}
   {{/if}}>
-  {{#if page-main-subnav--IsLimitWidth}}
+  {{#if page-main-nav--IsLimitWidth}}
     {{#> page-main-body}}
       {{> @partial-block}}
     {{/page-main-body}}
