--- a/src/patternfly/demos/Page/page-demo-expandable-nav.hbs
+++ b/src/patternfly/demos/Page/page-demo-expandable-nav.hbs
@@ -21,7 +21,7 @@
   {{#> page-sidebar}}
     {{#> nav nav--expandable="true" nav--attribute=(concat 'id="' page--id '-expandable-nav" aria-label="Global"')}}
       {{#> nav-list}}
-        {{#> nav-item nav-item--expandable="true" nav-item--expanded="true" nav-item--current="true"}}
+        {{#> nav-item nav-item--IsExpandable="true" nav-item--expanded="true" nav-item--current="true"}}
           {{#> nav-link nav-link--href="#" nav-link--attribute=(concat 'id="' page--id '-expandable-nav-link1"')}}
             System panel
           {{/nav-link}}
@@ -59,7 +59,7 @@
             {{/nav-item}}
           {{/nav-subnav}}
         {{/nav-item}}
-        {{#> nav-item nav-item--expandable="true"}}
+        {{#> nav-item nav-item--IsExpandable="true"}}
           {{#> nav-link nav-link--href="#" nav-link--attribute=(concat 'id="' page--id '-expandable-nav-link2"')}}
             Policy
           {{/nav-link}}
@@ -76,7 +76,7 @@
             {{/nav-item}}
           {{/nav-subnav}}
         {{/nav-item}}
-        {{#> nav-item nav-item--expandable="true"}}
+        {{#> nav-item nav-item--IsExpandable="true"}}
           {{#> nav-link nav-link--href="#" nav-link--attribute=(concat 'id="' page--id '-expandable-nav-link3"')}}
             Authentication
           {{/nav-link}}
