chore(v6): rebase against main (#6048)
* chore(select): fixed text in HTML example to show multiple checks can be selected (#5663)

* chore: Update release.yml to node 18 [ci skip]

* chore: add superclean npm script (#5798)

* chore(options-menu): updated markup to match react component (#5809)

* chore(deps): update dependency @patternfly/documentation-framework to v5.1.3 (#5720)

Co-authored-by: renovate[bot] <29139614+renovate[bot]@users.noreply.github.com>

* chore(deps): bump semver from 5.7.1 to 5.7.2 (#5756)

Bumps [semver](https://github.com/npm/node-semver) from 5.7.1 to 5.7.2.
- [Release notes](https://github.com/npm/node-semver/releases)
- [Changelog](https://github.com/npm/node-semver/blob/v5.7.2/CHANGELOG.md)
- [Commits](https://github.com/npm/node-semver/compare/v5.7.1...v5.7.2)

---
updated-dependencies:
- dependency-name: semver
  dependency-type: indirect
...

Signed-off-by: dependabot[bot] <support@github.com>
Co-authored-by: dependabot[bot] <49699333+dependabot[bot]@users.noreply.github.com>

* fix: updated use of flex start/end to be more compatible (#5807)

* fix(chip): add margin for badge when used in text element (#5844)

* feat(global): added RTL support (#5778)

* fix: added tree view icon (#5845)

* fix: added tree view icon

* chore: put treeviewicon in alphabetical order

* chore: rtl fixes, screenshots (#5854)

* chore: rtl fixes, screenshots

* chore: checkin screenshots

* chore(deps): update dependency @patternfly/documentation-framework to v5.1.7 (#5852)

Co-authored-by: renovate[bot] <29139614+renovate[bot]@users.noreply.github.com>

* chore: enable RTL switcher on full page examples (#5859)

* docs: update location of and references to docs to consolidate and organize information. (#5773)

* fix: added base, wizard, pagination RTL styles (#5860)

* chore(Accordion,ExpandableSection): added more RTL styling (#5861)

* fix(RTL): refactor mixins, add slider rtl styles (#5867)

--- a/src/patternfly/components/Button/button.scss
+++ b/src/patternfly/components/Button/button.scss
@@ -575,14 +575,12 @@
     color: var(--#{$button}--m-plain--Color);
     background-color: var(--#{$button}--m-plain--BackgroundColor);
 
-
     &.pf-m-no-padding {
       padding: 0;
     }
 
     &:hover,
-    &:focus,
-    &:active {
+    &:focus {
       --#{$button}--m-plain--BackgroundColor: var(--#{$button}--m-plain--hover--BackgroundColor);
 
       mix-blend-mode: var(--pf-t--global--background--color--action--plain--hover--blend);
